Worked more on the art section

--- a/PORTFOLIO_PROJECT/portfolio.html
+++ b/PORTFOLIO_PROJECT/portfolio.html
@@ -168,10 +168,43 @@
 
     <div class="Art-photos">
 
-        <div>
+        <div> <!--Electro yeah-->
                <input type="image" src="ASSETS/ICONS/Electro_yeah_icon.png"  id="Electro-yeah" 
                class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
         </div>
+
+        <div> <!--Electro yeah-->
+          <input type="image" src="ASSETS/ICONS/AB_AR_icon.png"  id="Electro-yeah" 
+          class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
+         </div>
+
+         <div> <!--Electro yeah-->
+          <input type="image" src="ASSETS/ICONS/ANTA_icon.png"  id="Electro-yeah" 
+          class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
+         </div>
+
+         <div> <!--Electro yeah-->
+          <input type="image" src="ASSETS/ICONS/WOOD_icon.png"  id="Electro-yeah" 
+          class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
+         </div>
+
+         <div> <!--Electro yeah-->
+          <input type="image" src="ASSETS/ICONS/Electro_yeah_icon.png"  id="Electro-yeah" 
+          class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
+         </div>
+                  
+         <div> <!--Electro yeah-->
+          <input type="image" src="ASSETS/ICONS/Electro_yeah_icon.png"  id="Electro-yeah" 
+          class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
+         </div>
+
+
+         <div> <!--Electro yeah-->
+          <input type="image" src="ASSETS/ICONS/Electro_yeah_icon.png"  id="Electro-yeah" 
+          class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
+         </div>
+         
+
 
 
     </div>
