--- a/PORTFOLIO_PROJECT/LIBRARIES/art_button_library.html
+++ b/PORTFOLIO_PROJECT/LIBRARIES/art_button_library.html
@@ -51,7 +51,7 @@ class="btn btn-info btn-lg" data-toggle="modal" data-target="#WormmyModal">
     
 
 <div> <!--Silly car-->
-<input type="image" src="ASSETS/ICONS/SIlly_car_icon.png" alt="Silly car"  id="Lost-worm" 
+<input type="image" src="ASSETS/ICONS/SIlly_car_icon.png" alt="Silly car"  id="Sily-car" 
 class="btn btn-info btn-lg" data-toggle="modal" data-target="#SCmyModal">
 </div>
 
