Added about me and background

--- a/PORTFOLIO_PROJECT/portfolio.html
+++ b/PORTFOLIO_PROJECT/portfolio.html
@@ -25,6 +25,23 @@
 
 <html>
 
+<style>
+  body {
+
+font-family: Arial, Helvetica, sans-serif;
+background-color: black;
+
+background-color:rgb(18, 2, 66);
+
+background-image: linear-gradient(to bottom, rgba(0, 4, 41, 0.5) 0%,rgba(0, 4, 41, 0.5) 100%),  url("ASSETS/site_background.png");
+background-size:cover;
+background-repeat: no-repeat;
+background-attachment: fixed;
+
+
+}
+</style>
+
 <!--//////////////////////////////////////-->
 
 <body>
@@ -40,7 +57,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
-
+ <!--Background-->
 
   
  <!--Navigation bar-->
@@ -76,7 +93,7 @@
  <div>
   <br>
   <h2 style="text-align: center; font-size: 200%;">Hi, my name's</h2>
-  <h1 style="text-align: center; font-size: 400%; margin-top:0px;">ELECTRO / LORENZO ARIENTI</h1>
+  <h1 style="text-align: center; font-size: 400%; margin-top:0px;">ELECTRO</h1>
   <hr  id="horiz_title">
 
  </div>
@@ -130,7 +147,7 @@
   <!--Games-->
   <div class="Games-tab">
    
-      <hr style="width:70%;">
+      <hr style="width:50%;">
    
       <h2 style="font-size: 400%; text-align: center;">
 
@@ -166,7 +183,7 @@
  <!--Art-->
  <div class="Art-tab">
 
-   <hr style="width:70%;">
+   <hr style="width:50%;">
 
    <h2 style="font-size: 400%; text-align: center;">
        ART
@@ -179,7 +196,7 @@
     <!--Art buttons-->
     <div class="Art-photos" id="art-button-library">
 
-         <div id="about"></div>
+         
 
     </div>
     
@@ -190,20 +207,32 @@
  <!--About-->
  <div class="About-tab">
    
-  <hr style="width:70%;">
+  <hr style="width:50%;">
   
   <h2 style="font-size: 400%; text-align: center; justify-content: center;
   align-items: center;">
  
       ABOUT ME
+      <div id="about"></div>
 
   </h2>
 
-  <p>
-    a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>
-    a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>
-    a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>a<br>
-  </p>
+
+
+  <h4 style="text-align: center; color:white; margin-top:-40px;">
+     I'm <span class="yellowtext">Electro</span>, a 17 year old artist and programmer from Italy.
+     <br><br>
+     While I have been drawing for my whole life, I've only been programming for 3 years, starting with Gamemaker 8.1.
+     <br>
+    I've always been fascinated about making games and bringing my characters to life, always trying to improve my game development skills
+    <br>
+    as well as learning more professional programming languages, but I'm still very early into them.
+
+    <br><br>
+    You can contact me on <a href="https://twitter.com/EIectroDev" target="_blank" class="yellowtext">Twitter</a> or you can send me an
+    <a href="mailto:electrogamesbusinnes@gmail.com" class="yellowtext">email</a>, I'll try to answer as soon as
+    I can.
+  </h4>
 
   
 </div>
