Added commander tartar art

--- a/PORTFOLIO_PROJECT/LIBRARIES/art_button_library.html
+++ b/PORTFOLIO_PROJECT/LIBRARIES/art_button_library.html
@@ -15,6 +15,11 @@ class="btn btn-info btn-lg" data-toggle="modal" data-target="#ArtistmyModal">
 class="btn btn-info btn-lg" data-toggle="modal" data-target="#ScoutmyModal">
 </div>
 
+<div> <!--Tartar-->
+    <input type="image" src="ASSETS/ICONS/Com_Tartar_icon.png" alt="Commander Tartar"  id="Tartar" 
+    class="btn btn-info btn-lg" data-toggle="modal" data-target="#TartarmyModal">
+</div>
+
 <div> <!--Antasma-->
 <input type="image" src="ASSETS/ICONS/ANTA_icon.png" alt="Antasma"  id="Incuback" 
 class="btn btn-info btn-lg" data-toggle="modal" data-target="#AntasmamyModal">
@@ -71,6 +76,7 @@ class="btn btn-info btn-lg" data-toggle="modal" data-target="#ScarpTrapmyModal">
 <input type="image" src="ASSETS/ICONS/lemon_demon_icon.png" alt="Lemon monster"  id="Lemon" 
 class="btn btn-info btn-lg" data-toggle="modal" data-target="#LemonmyModal">
 </div>
+
 
 
 <div> <!--Shubs-->
