fixed typo in GMG page

--- a/PORTFOLIO_PROJECT/LIBRARIES/game_page_library.html
+++ b/PORTFOLIO_PROJECT/LIBRARIES/game_page_library.html
@@ -169,7 +169,7 @@
           display: block; " src="ASSETS/LOGOS/GBG_logo.png" alt="AME logo">
 
 
-          <p>A project I started around Game Builder Garage's release, bascially a soft remake of it.
+          <p>A project I started around Game Builder Garage's release, basically a soft remake of it.
               <br>
               It's been going though many rewrites so there's still no public build yet.
           </p>
