--- a/PORTFOLIO_PROJECT/LIBRARIES/art_button_library.html
+++ b/PORTFOLIO_PROJECT/LIBRARIES/art_button_library.html
@@ -50,6 +50,11 @@ class="btn btn-info btn-lg" data-toggle="modal" data-target="#SLmyModal">
 class="btn btn-info btn-lg" data-toggle="modal" data-target="#WormmyModal">
 </div>
 
+<div> <!--Silly sewer guy-->
+    <input type="image" src="ASSETS/ICONS/rh_sewer_guy_icon.png" alt="Sewer_guy"  id="sew-guy" 
+    class="btn btn-info btn-lg" data-toggle="modal" data-target="#RHsewerGmyModal">
+</div>
+
 <div> <!--Electro outfits-->
     <input type="image" src="ASSETS/ICONS/Electro_outfits_icon.png" alt="Peach outfits"  id="E_Outfits" 
     class="btn btn-info btn-lg" data-toggle="modal" data-target="#OutfitmyModal">
@@ -57,7 +62,7 @@ class="btn btn-info btn-lg" data-toggle="modal" data-target="#WormmyModal">
     
 
 <div> <!--Silly car-->
-<input type="image" src="ASSETS/ICONS/SIlly_car_icon.png" alt="Silly car"  id="Sily-car" 
+<input type="image" src="ASSETS/ICONS/SIlly_car_icon.png" alt="Silly car"  id="Silly-car" 
 class="btn btn-info btn-lg" data-toggle="modal" data-target="#SCmyModal">
 </div>
 
