--- a/PORTFOLIO_PROJECT/LIBRARIES/game_page_library.html
+++ b/PORTFOLIO_PROJECT/LIBRARIES/game_page_library.html
@@ -39,7 +39,7 @@
 
               <div style="text-decoration: none; text-align: center; color:white; ">
 
-                <h4>Art</h4>
+                <h4>Art and sprites</h4>
 
               </div>
              
@@ -119,7 +119,7 @@
         <div class="modal-header">
 
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Another Mario Editor (Work in progress)</h4>
+          <h4 class="modal-title">Another Mario Editor (Work in progress)<br>Current version: 0.2.1</h4>
 
         </div>
 
