Updated some game pages

--- a/PORTFOLIO_PROJECT/LIBRARIES/game_page_library.html
+++ b/PORTFOLIO_PROJECT/LIBRARIES/game_page_library.html
@@ -64,18 +64,27 @@
             forgotten place <span class="yellowtext">Rocket Boy</span> has fallen into, you'll have to find a way to the surface
             while finding out what has happened to his world.</p>
 
-          <img style="width:75%; margin-left:auto; margin-right:auto;
-          display:block;" src="ASSETS/SCREENSHOTS/RH_1.png" alt="Editor screenshot">
+
           <img style="width:75%; margin-left:auto; margin-right:auto; margin-top: 10px;
-          display:block;" src="ASSETS/SCREENSHOTS/RH_2.png" alt="Editor screenshot">
-          <img style="width:75%; margin-left:auto; margin-right:auto; margin-top: 10px;
-          display:block;" src="ASSETS/SCREENSHOTS/RH_3.png" alt="Editor screenshot">
+          display:block; " src="ASSETS/SCREENSHOTS/RH_2.png" alt="Rocket boy looking at a big pipe">
+
+          <h2 style="text-align:center;">Video updates can be found on my 
+            <a href="https://www.youtube.com/channel/UCf_pnlWS5u7NiUYKiTor2-A" class="yellowtext" target="_blank">Youtube channel</a>
+          </h2>
+
+          <iframe width="560" height="315" 
+              src="https://www.youtube.com/embed/RQMFkQtJSaM" 
+              
+              style="margin-top:30px;margin-left:auto; margin-right:auto; display:block; box-shadow: 10px 10px var(--nav_bg_color_active), -10px -10px var(--nav_bg_color_active)
+              ,10px -10px var(--nav_bg_color_active),  -10px 10px var(--nav_bg_color_active);">            
+          </iframe>
 
           <p>
             The game is still to early in development so everything shown is subject to change, a site dedicated to it
             will be made as development goes foward.
             You can join my <a href="https://discord.gg/KRfvxPTtP7" class="yellowtext" target="_blank">Discord server</a> for updates.
           </p>
+
 
         </div>
         
@@ -90,6 +99,17 @@
                 <div style="text-decoration: none; text-align: center; color:white; ">
 
                   <h4>Site (not ready yet)</h4>
+
+                </div>
+
+            </a>
+
+            <a href="https://discord.gg/KRfvxPTtP7" target="_blank" class="Showlink-button" 
+               >
+
+                <div style="text-decoration: none; text-align: center; color:white; ">
+
+                  <h4>Discord server</h4>
 
                 </div>
 
@@ -119,7 +139,7 @@
         <div class="modal-header">
 
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Another Mario Editor (Work in progress)<br>Current version: 0.2.1</h4>
+          <h4 class="modal-title">Another Mario Editor (Work in progress)<br>Current version: 0.2.2</h4>
 
         </div>
 
@@ -158,7 +178,7 @@
 
           <p>This is a soft remake of the Super Mario Maker 2 level editor, started for fun and to improve my programming skills.
               <br>
-              For now it's just a work in progress, with a few objects and saving/loading support, I'm not planning on adding every single feature from the original game.
+              For now it's just a work in progress, I'm not planning on adding every single feature from the original game.
           </p>
 
           <img style="width:75%; margin-left:auto; margin-right:auto;
