--- a/PORTFOLIO_PROJECT/portfolio.html
+++ b/PORTFOLIO_PROJECT/portfolio.html
@@ -225,7 +225,7 @@
     <!--About-->
     <div class="About-tab">
    
-      <hr style="width:50%;">
+      <hr style="width:50%; margin-top: 30px;">
   
       <h2 style="font-size: 400%; text-align: center; justify-content: center; align-items: center;">
  
