--- a/PORTFOLIO_PROJECT/LIBRARIES/game_page_library.html
+++ b/PORTFOLIO_PROJECT/LIBRARIES/game_page_library.html
@@ -263,6 +263,15 @@
             </a>
               
           </div>
+ 
+
+          <video width="100%" style="margin-left: auto; margin-top:20px;
+          margin-right: auto;"  autoplay >
+            <source src="ASSETS/VIDEOS/UFO_test.mp4" type="video/mp4" >
+           
+            Your browser does not support HTML video.
+          </video>
+
 
           <p>A project I started around Game Builder Garage's release, basically a soft remake of it.
               <br>
