--- a/PORTFOLIO_PROJECT/LIBRARIES/art_button_library.html
+++ b/PORTFOLIO_PROJECT/LIBRARIES/art_button_library.html
@@ -1,4 +1,9 @@
 
+<div> <!--Bog shot-->
+    <input type="image" src="ASSETS/ICONS/bigshot_icon.png" alt="neo"  id="neo" 
+    class="btn btn-info btn-lg" data-toggle="modal" data-target="#NEOmyModal">
+</div>
+
 <div> <!--October 6-->
     <input type="image" src="ASSETS/ICONS/octo_6_icon.png" alt="octo 6"  id="octo 6" 
     class="btn btn-info btn-lg" data-toggle="modal" data-target="#OCTO6myModal">
