--- a/PORTFOLIO_PROJECT/portfolio.html
+++ b/PORTFOLIO_PROJECT/portfolio.html
@@ -58,7 +58,10 @@
 </script> 
 
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" style="-webkit-user-select: none; /* Safari */        
+-moz-user-select: none; /* Firefox */
+-ms-user-select: none; /* IE10+/Edge */
+user-select: none; /* Standard */">
 
   <!--Head-->
   <head> 
