--- a/PORTFOLIO_PROJECT/LIBRARIES/game_page_library.html
+++ b/PORTFOLIO_PROJECT/LIBRARIES/game_page_library.html
@@ -64,6 +64,11 @@
                  <br>
                  Originally started in GameMaker 8.1
               </p>
+
+              <p style="margin-top:-10px">
+                <br>
+                <b>Status: </b>in development, no new public updates.
+              </p>
             </div>
 
             <div style="display:block; margin-left: auto; 
@@ -207,6 +212,11 @@
                 <br>
                 Originally started in GameMaker: Studio 1.4
              </p>
+
+             <p style="margin-top:-20px">
+              <br>
+              <b>Status: </b>not in development anymore.
+            </p>
            </div>
 
            <div style="display:block; margin-left: auto; 
@@ -299,6 +309,11 @@
              <p style="margin-top:-30px">
                 <br>
                 GameMaker Studio 1.4
+             </p>
+
+             <p style="margin-top:-20px">
+               <br>
+               <b>Status: </b>on halt.
              </p>
            </div>
 
