--- a/LIBRARIES/navbar.html
+++ b/LIBRARIES/navbar.html
@@ -95,7 +95,7 @@
         <img id="logoimg" src="ASSETS/LOGOS/afe.png" style="width:70px; height:70px; position:relative; top:10px;">
       </a> 
   
-      <a id="topnav-button" href="https://electrodev1.github.io">Home</a>
+      <a id="topnav-button" href="https://electrodev1.github.io/home">Home</a>
       <a id="topnav-button" href="https://electrodev1.github.io/games">Games</a>
       <a id="topnav-button" href="https://electrodev1.github.io/art">Art</a>
       <a id="topnav-button" href="https://electrodev1.github.io/music">Music</a>
