--- a/LIBRARIES/navbar.html
+++ b/LIBRARIES/navbar.html
@@ -91,7 +91,7 @@
     <!--Top bar-->
     <div class="topnav" id="myTopnav">
 
-      <a id="logo" href="https://electrodev1.github.io">
+      <a id="logo" href="https://electrodev1.github.io/home">
         <img id="logoimg" src="ASSETS/LOGOS/afe.png" style="width:70px; height:70px; position:relative; top:10px;">
       </a> 
   
