--- a/LIBRARIES/navbar.html
+++ b/LIBRARIES/navbar.html
@@ -99,7 +99,7 @@
       <a id="topnav-button" href="https://electrodev1.github.io/games">Games</a>
       <a id="topnav-button" href="https://electrodev1.github.io/art">Art</a>
       <a id="topnav-button" href="https://electrodev1.github.io/music">Music</a>
-      <a id="topnav-button" href="https://electrodev1.github.io#about">About</a>
+      <a id="topnav-button" href="https://electrodev1.github.io/home#about">About</a>
       <a id="topnav-button" href="https://electrodev1.github.io/blog">Blog</a>
       <a id="topnav-button" class="CommsChange" href="https://electrodev1.github.io/comms_info">Commissions</a>   
 
