--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ background-color:rgb(18, 2, 66);
 
         <h1 id="introcution" style="font-size: 140%; text-align:center; ">
          
-          I'm an <span class="yellowtext">artist</span> and <span class="yellowtext">programmer</span>,
+          I'm a <span class="yellowtext">2D/3D artist</span> and <span class="yellowtext">programmer</span>,
           but I try new things all the time.<br>
 
         </h1>
@@ -226,14 +226,11 @@ background-color:rgb(18, 2, 66);
 
           I'm <span class="yellowtext">Electro</span>, a  year old artist and programmer from Italy.
           <br><br>
-          While I have been drawing for my whole life, I've only been programming for 3 years, starting with Gamemaker 8.1.
+          While I have been drawing for my whole life, I've only been programming for 3 years, starting with Gamemaker 8.1, and <br>currently takling things like web development and more advanced languages like JavaScript.
           <br>
-          I've always been fascinated about making games and bringing my characters to life, always trying to improve my game development skills
+          I've always been fascinated about making games and bringing things to life, and<br>to always try to improve my skills in any field, and I'm always excited to work on something new!
           <br>
-          as well as learning more professional programming languages, but I'm still very early into them.
-          <br>Right now I'm learning more professional programming languages like Javascript, web development with things like
-          this site, and even getting into making music.
-          <br><br>
+          <br>
           You can contact me on <a href="https://twitter.com/EIectroDev" target="_blank" class="yellowtext">Twitter</a> or you can 
           send me an <a href="mailto:electrogamesbusinnes@gmail.com" class="yellowtext">email</a>, I'll try to answer as soon as I can.
     
