--- a/blog.html
+++ b/blog.html
@@ -122,13 +122,12 @@ user-select: none; /* Standard */"
     <div class="Blog-tab">
 
       <div style="height:1em;"></div>
-      <h1 style="font-size: 400%; text-align: center; margin-top:2px; position:relative; top:10px" class="HeaderText">BLOG</h1>
+      <h1 style="font-size: 400%; text-align: center; margin-top:2px; position:relative; top:10px" class="HeaderText">BLOGS</h1>
 
       <hr style="width:80vw; margin-top:-30px;">
 
       <div class="Blog-buttons" style="margin-top:-1em;"  id="blog-button-library"></div>
      
-
     </div>
 
     <!--Decoration side bars-->
@@ -137,9 +136,6 @@ user-select: none; /* Standard */"
 
     <div id="blog-page-library"></div>
 
-    <!--Art modal lists-->
-    <div id="game-page-library"></div>
-    <div id="music-page-library"></div>
 
     <!--Footer-->
 
