--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ user-select: none; /* Standard */"
     <meta name="theme-color" content="#f0d909">
     <meta property="og:title" content="Electro⚡'s portfolio">
     <meta property="og:description" content="">
-    <meta property="og:url" content="https://electrodev1.github.io/">
+    <meta property="og:url" content="https://electrodev1.github.io/home">
     <meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1">
     <meta name="viewport" content="width=1000;">
     <link href='https://fonts.googleapis.com/css?family=Permanent Marker' rel='stylesheet'>
@@ -353,7 +353,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3f5efb",endCo
       <div class="Port-container">
 
         <div class="Portbutton" > <!--Art-->
-          <a class="ArtTitle" >Art portfolio</a>
+          <a href="https://electrodev1.github.io/art" target="_blank" class="ArtTitle" >Art portfolio</a>
           <a  href="https://electrodev1.github.io/art" >
             <img id="gamebtn" src="ASSETS/MISC/art_button.png" alt="Art page">
           </a>
@@ -361,7 +361,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3f5efb",endCo
         </div>
 
         <div class="Portbutton" > <!--Games-->
-          <a class="ArtTitle" >Games/software<br>portfolio</a>
+          <a href="https://electrodev1.github.io/games" target="_blank" class="ArtTitle" >Games/software<br>portfolio</a>
           <a  href="https://electrodev1.github.io/games">
             <img id="gamebtn" src="ASSETS/MISC/games_button.png" alt="Games page">
           </a>
@@ -369,7 +369,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3f5efb",endCo
         </div>
 
         <div class="Portbutton" > <!--Music-->
-          <a class="ArtTitle" >Music portfolio</a>
+          <a href="https://electrodev1.github.io/music" target="_blank" class="ArtTitle" >Music portfolio</a>
           <a  href="https://electrodev1.github.io/music">
             <img id="gamebtn" src="ASSETS/MISC/music_button.png" alt="Music page">
           </a>
