--- a/LIBRARIES/navbar.html
+++ b/LIBRARIES/navbar.html
@@ -6,7 +6,7 @@
     left: 0;
     z-index: 999;
     width: 100%;
-    height: min-content;
+    height: 85px;
     background-color: var(--nav_bg_color);
     box-shadow: 0px var(--border-width) var(--nav_bg_color_selected);
     display:flex;
@@ -62,7 +62,7 @@
     padding: 28px 20px;
     width:auto;
     text-decoration: none;
-    margin-top: -2px;
+    margin-top: -10px;
     font-size: 34px; 
     transition: 0.3s;
     font-family: 'Permanent Marker';
@@ -92,7 +92,7 @@
     <div class="topnav" id="myTopnav">
 
       <a id="logo" href="https://electrodev1.github.io/home">
-        <img id="logoimg" src="ASSETS/LOGOS/afe.png" style="width:70px; height:70px; position:relative; top:10px;">
+        <img id="logoimg" src="/ASSETS/LOGOS/afe.png" style="width:70px; height:70px; position:relative; top:10px;">
       </a> 
   
       <a id="topnav-button" href="https://electrodev1.github.io/home">Home</a>
@@ -108,13 +108,14 @@
 
 </div>
 
-<script type="text/javascript" src="JS/site_theme.js"></script>
+<script src="/JS/site_theme.js"></script>
 
 <script type="text/javascript">
    
   //Make the text smaller when on mobile
   if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)){
     $(".CommsChange").html("Comms.");
+    console.log("Giving navbar mobile text")
   }
   
 </script>
