--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@ user-select: none; /* Standard */"
     <meta property="og:title" content="Electro⚡'s portfolio">
     <meta property="og:description" content="">
     <meta property="og:url" content="https://electrodev1.github.io/home">
+    <meta property="og:image" content="https://electrodev1.github.io/ASSETS/LOGOS/afe.png">
     <meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1">
     <meta name="viewport" content="width=1000;">
     <link href='https://fonts.googleapis.com/css?family=Permanent Marker' rel='stylesheet'>
 
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@nytimesbits" />
-    <meta name="twitter:creator" content="@nickbilton" />
+    <meta name="twitter:site" content="" />
+    <meta name="twitter:creator" content="" />
     <meta property="og:url" content="https://electrodev1.github.io/home/" />
-    <meta property="og:title" content="A Twitter card test" />
-    <meta property="og:description" content="In the early days, Twitter grew so quickly that it was almost impossible to add new features because engineers spent their time trying to keep the rocket ship from stalling." />
-    <meta property="og:image" content="http://graphics8.nytimes.com/images/2011/12/08/technology/bits-newtwitter/bits-newtwitter-tmagArticle.jpg" />
+    <meta property="og:title" content="Electro⚡'s portfolio" />
+    <meta property="og:description" content="" />
+    <meta property="og:image" content="https://electrodev1.github.io/ASSETS/LOGOS/afe.png" />
     
     <!--Get various things-->
     <script src="jquery.js"></script> 
