--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@ user-select: none; /* Standard */"
     <meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1">
     <meta name="viewport" content="width=1000;">
     <link href='https://fonts.googleapis.com/css?family=Permanent Marker' rel='stylesheet'>
-<!--
+
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@EIectroDev" />
-    <meta name="twitter:creator" content="@EIectroDev" />-->
+    <meta name="twitter:creator" content="@EIectroDev" />
     
     <!--Get various things-->
     <script src="jquery.js"></script> 
