--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3f5efb",endCo
       z-index: 20;
       transform: translate(0, calc(var(--art-size) / 2 - 10px) );
         filter: opacity(0%);
-
+      color:white;
+      text-decoration: none;
       -webkit-text-stroke: .1px #000000;
       text-shadow: 0px 0px 10px #000000;
     } 
