--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3f5efb",endCo
   <body>
 
     <style> 
-      .title-container{display:flex;justify-content:center; margin-top:-10px;  height:calc(750px / 3 * 1.6); }
-      .title-background{ width:80vw; position:absolute; 
+      .title-container{display:flex;justify-content:center; margin-top:-10px;  height:max-content; }
+      .title-background{ width:80vw; 
         animation-name: background-fadein; animation-fill-mode: forwards;
         animation-duration:1s;
       }
